--- a/web/revamp/css/main.css
+++ b/web/revamp/css/main.css
@@ -6,8 +6,14 @@ main {
     width: 100vw;
 }
 
-main > * {
+main > section {
+    display: flex;
+    justify-content: center;
     padding: 1em 2em;
+}
+
+main > section > * {
+    max-width: 1024px;
 }
 
 #description {
